gnome-shell (3.24.1-0ubuntu2) UNRELEASED; urgency=medium

  * debian/control.in 
    - Suggest switcheroo-control and chrome-gnome-shell instead of recommend
    - Dropped build dep for gir1.2-telepathylogger-0.2
    - Dropped gnome-contacts from recommends, lets use the seed to select apps

  [ Simon McVittie]
  * Drop Telepathy g-i bindings from Depends to Suggests now that they
    are runtime-optional upstream

 -- Ken VanDine <ken.vandine@canonical.com>  Fri, 21 Apr 2017 10:39:18 -0400

gnome-shell (3.24.1-0ubuntu1) zesty; urgency=medium

  * New upstream release (LP: #1682238)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 12 Apr 2017 17:40:02 -0400

gnome-shell (3.24.0-0ubuntu2) zesty; urgency=medium

  * Recommend switcheroo-control for dual GPU support (LP: #1671828)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 23 Mar 2017 21:46:25 -0400

gnome-shell (3.24.0-0ubuntu1) zesty; urgency=medium

  * New upstream translations release.
  * Bump minimum mutter to 3.24.0

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 20 Mar 2017 20:07:54 -0400

gnome-shell (3.23.92-0ubuntu1) zesty; urgency=medium

  * New upstream release
  * debian/control.in:
    - Drop obsolete Build-Depends against telepathy-glib
    - Bump minimum mutter to 3.23.92
  * Drop git patches applied in new release

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 14 Mar 2017 15:28:09 -0400

gnome-shell (3.23.91-0ubuntu4) zesty; urgency=medium

  * debian/control.in:
    - Recommend chrome-gnome-shell
    - Recommend xserver-xorg-legacy until all the proprietary NVIDIA
      drivers depend on it (LP: #1559576)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 10 Mar 2017 20:08:00 -0500

gnome-shell (3.23.91-0ubuntu3) zesty; urgency=medium

  * debian/control.in:
    - Depend on gir1.2-geoclue-2.0 (LP: #1671823)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 10 Mar 2017 09:19:54 -0500

gnome-shell (3.23.91-0ubuntu2) zesty; urgency=medium

  * Add patches to backport some commits from git:
    - git_fix_typos.patch