@@ -86,7 +86,7 @@ Depends: ${gir:Depends},
          gnome-session,
          gnome-settings-daemon (>= 3.16.0),
          gnome-shell-common (= ${source:Version}),
-         gnome-backgrounds (>= 3.13.90),
+         ubuntu-wallpapers,
          gsettings-desktop-schemas (>= 3.21.3),
          mutter (>= 3.23.91),
          python3,
@@ -94,14 +94,14 @@ Depends: ${gir:Depends},
 Recommends: xserver-xorg-legacy,
             gkbd-capplet,
             gnome-control-center,
-            gnome-themes-standard-data,
-            gnome-user-guide,
             gdm3 (>= 3.10.0.1-3~),
-            iio-sensor-proxy,
             unzip
 Suggests: gir1.2-telepathyglib-0.12,
           gir1.2-telepathylogger-0.2 (>= 0.8.0),
           chrome-gnome-shell,
+          gnome-themes-standard-data,
+          gnome-user-guide,
+          iio-sensor-proxy,
           switcheroo-control
 Breaks: gdm3 (<< 3.19.92),
         gnome-session (<< 3.19)
